respo,sive portfolio added

--- a/app/[locale]/css/portfolio.css
+++ b/app/[locale]/css/portfolio.css
@@ -1,3 +1,6 @@
+.summary p{
+  font-size: 18px;
+}
 
 .projects-grid {
   padding-top: .5em;
@@ -5,18 +8,19 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: wrap;
-  gap: 22px;
+  gap: 2.7%;
 }
 
 .project {
-  width: 32%;
-  height: 340px;
+  width: 31.5%;
+  height: 400px;  
   height: auto;
   padding: 0;
   margin: 0;
-  margin-bottom: 2%;
-  border: 1px #777;
-  box-shadow: 0 0 12px #777;
+  margin-bottom: 5%;
+  border: 1px solid darkkhaki;
+  border-radius: 4px;
+  box-shadow: 0 0 12px #dcdcdc55;
   display: flex;
 }
 
@@ -26,10 +30,13 @@
   min-height: 220px;
   object-fit: cover;
   overflow: hidden;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 .infos{
   padding: 10px 15px;
+  background-color: #d5d5d511;
 }
 .project .title{
   font-size: 24px;
@@ -37,74 +44,53 @@
 .project .stack{
   display: flex;
   justify-content: flex-end;
+  align-items: flex-end;
   color: green;
 }
 
-/* @media screen and (max-width: 1250px) {
+@media screen and (max-width: 1200px) {
+
+  .projects-grid {
+    gap: 5.9%
+  }
   .project {
-    width: 46.5%;
+    width: 47%;
+    margin-bottom: 5%;
+  }
+}
+
+@media screen and (max-width: 924px) {
+  
+  .projects-grid {
+    gap: 3%
+  }
+  
+  .project {
+    width: 48.5%;
     margin-bottom: 4.5%;
   }
-
-  .projects-grid {
-    gap: 5%
+  .gap-8 {
+    gap: 1.2rem;
   }
 }
 
-@media screen and (max-width: 1024px) {
-  .project {
-    width: 31%;
-    margin-bottom: 4.5%;
-  }
-
-  .projects-grid {
-    gap: 2.7%
-  }
-
-  .description {
-    display: flex;
-  }
-
-}
-
-@media screen and (max-width: 900px) {
-  .project {
-    width: 46.5%;
-    margin-bottom: 4.5%;
-  }
-
-  .projects-grid {
-    gap: 5.5%
-  }
-}
-
-@media screen and (max-width: 768px) {
-
-  .project {
-    width: 47.5%;
-    margin-bottom: 4%;
-  }
-
-  .projects-grid {
-    padding-top: 10px;
-    gap: 2.5%
-  }
-}
-
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 650px) {
 
   .project {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 35px;
   }
 
   .projects-grid {
     padding-top: 20px;
-    gap: 0%;
+    gap: 5%;
   }
 
   .cover-image img {
-    height: 300px;
+    height: auto;
+    max-height: 300px;
   }
-
-} */
+  .gap-8 {
+    gap: .5rem;
+  }
+}
