--- a/app/[locale]/css/portfolio.css
+++ b/app/[locale]/css/portfolio.css
@@ -45,7 +45,8 @@
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
-  color: green;
+  margin: 0;
+  gap: 5px;
 }
 
 @media screen and (max-width: 1200px) {
