--- a/app/globals.css
+++ b/app/globals.css
@@ -68,6 +68,10 @@ body {
   /* background:  url('/write_in_tongues/6.svg') center / cover no-repeat fixed padding-box;   */
 }
 
+section {
+  padding: 2rem 4rem;
+}
+
 
 h1 {
   font-size: 2rem;
@@ -95,6 +99,18 @@ h2 {
 
 .navbar .cta:hover {
   transform: scale(1.02);
+}
+
+li.purple {
+  color: var(--purple);
+}
+
+li.blue, .blue {
+  color: var(--blue);
+}
+
+li.gray {
+  color: var(--gray);
 }
 
 
@@ -195,7 +211,7 @@ a:not(.project-link):hover::after {
 /* Splash Screnn */
 
 .splash-screen{
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   background-color: var(--background-color);
@@ -299,6 +315,10 @@ a:not(.project-link):hover::after {
 
 @media screen and (max-width: 924px) {
   
+  section {
+    padding: 1.5rem 2rem;
+  }
+
   .main {
     gap: 50px;
   }
@@ -307,6 +327,10 @@ a:not(.project-link):hover::after {
 
 @media screen and (max-width: 650px) {
 
+
+  section {
+    padding: 1.8rem 1.5rem;
+  }
 
   section {
     padding: 1rem 1rem;
